truncate project description to prevent title overlapping

--- a/src/styles/projects.scss
+++ b/src/styles/projects.scss
@@ -65,7 +65,7 @@ $opacity: 0.3;
         z-index: 2;
       }
       &-top-title {
-        font-size: 1.8em;
+        font-size: 1.5em;
         line-height: 1em;
         margin-top: 0;
         text-align: left;
